# fls-grading

./: .gitignore  README.md  update_aws_workers.sh
.github/workflows/: buildenvs.yaml  buildimage.yaml  buildworkers.yaml
grades/: emails.sh  ogs_to_csv.py  rostersearch.sh
images/: .gitignore  Dockerfile  build-all-stages.sh  devshell.sh  grade.py  grading.Dockerfile
infra/: README.md  run.sh  update_aws_workers.sh
infra/packer/: arm.pkr.hcl  plugins.pkr.hcl  provision.sh  x86.pkr.hcl
infra/terraform/: .gitignore  main.tf  variables.tf  workers.auto.tfvars.example
server/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  drizzle.config.ts  entrypoint.sh  package-lock.json  package.json
server/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
server/app/admin/: AdminSidebar.tsx  UserCard.tsx  UserPagination.tsx  UserSearch.tsx  UsersTable.tsx  UsersTableRow.tsx  layout.tsx  page.tsx
server/app/components/: AvailableWorkers.tsx  BackButton.tsx  ConfirmActionModal.tsx  DownloadRosterButton.tsx  LoadingSpinner.tsx  Navbar.tsx  SignInButton.tsx  SignOutButton.tsx  UserSubmissions.tsx
server/app/db/: schema.ts  types.ts
server/app/lib/: apikey-client.ts  apikey.ts  auth-client.ts  auth.ts  env.ts  is-admin.ts  magiclink.ts  roster.ts  submissions.ts  users-client.ts  users.ts
worker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_worker.sh
worker/fls_worker/: apiclient.py  arch.py  config.py  dockerclient.py  errors.py  infraerrors.py  main.py  models.py  worker.py
(+29 files in other folders)
