[project]
name = "fls-worker"
version = "0.1.0"
description = "Dead simple grading worker for 6.S913"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
[project.scripts]
fls-worker = "fls_worker.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fls_worker"]
